# full-enum

./: .gitignore  CMakeLists.txt  README.md
include/: full-enum.hpp
source/: main.cpp
